[ksni] Add method to retrieve action by its name

REVIEW: 124155
BUG: 349513